cmake_minimum_required(VERSION 3.1)
add_subdirectory(BC1)
add_subdirectory(BC2)
add_subdirectory(BC3)
add_subdirectory(BC4)
add_subdirectory(BC5)
add_subdirectory(BC6)
add_subdirectory(firmware-update)
add_subdirectory(AT-AccessControl)
add_subdirectory(AT-Certificates)
add_subdirectory(AT-CustomObjects)
add_subdirectory(AT-Downloader)
add_subdirectory(AT-Persistence)
