cmake_minimum_required(VERSION 3.1)
add_subdirectory(BC-Initialization)
add_subdirectory(BC-MandatoryObjects)
add_subdirectory(BC-Security)
add_subdirectory(BC-ObjectImplementation)
add_subdirectory(BC-Notifications)
add_subdirectory(BC-ThreadSafety)
add_subdirectory(firmware-update)
add_subdirectory(AT-AccessControl)
add_subdirectory(AT-Certificates)
add_subdirectory(AT-CustomObjects)
add_subdirectory(AT-Downloader)
add_subdirectory(AT-Persistence)
add_subdirectory(AT-CustomEventLoop)
